#ifndef GRR_CLIENT_MINICOMM_BASE_H_
#define GRR_CLIENT_MINICOMM_BASE_H_

#include "google/protobuf/stubs/common.h"

typedef google::protobuf::uint8 uint8;
typedef google::protobuf::uint16 uint16;
typedef google::protobuf::uint32 uint32;
typedef google::protobuf::uint64 uint64;

typedef google::protobuf::int8 int8;
typedef google::protobuf::int16 int16;
typedef google::protobuf::int32 int32;
typedef google::protobuf::int64 int64;

typedef google::protobuf::LogLevel LogLevel;

#endif  // GRR_CLIENT_MINICOMM_BASE_H_
